--- a/public/admin.html
+++ b/public/admin.html
@@ -1049,15 +1049,15 @@
                         <label>Submission Type</label>
                         <div class="combobox-container">
                             <div class="combobox" onclick="toggleCombobox(this)">
-                                <span id="selectedSubmissionType">Instant Submit</span>
+                                <span id="selectedSubmissionType">Single Vote - Instant</span>
                                 <svg class="combobox-arrow" width="12" height="8" viewBox="0 0 12 8" fill="white">
                                     <path d="M1 1l5 5 5-5"/>
                                 </svg>
                             </div>
                             <div class="combobox-options">
-                                <div class="combobox-option selected" onclick="selectOption(this, 'instant')">Instant Submit</div>
-                                <div class="combobox-option" onclick="selectOption(this, 'batch')">Batch Submit</div>
-                                <div class="combobox-option" onclick="selectOption(this, 'timed-batch')">Timed Batch</div>
+                                <div class="combobox-option selected" onclick="selectOption(this, 'instant')">Single Vote - Instant</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'timed-batch')">Single Vote - Time Based</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'batch')">Multiple Votes - Time Based</div>
                             </div>
                         </div>
                     </div>
