Fix logo preview to show default BeastPick logo
The logo preview in Settings now displays the default BeastPick.png
logo when no custom logo is uploaded, matching what appears on the
voting and display pages.

--- a/public/admin.html
+++ b/public/admin.html
@@ -1347,9 +1347,8 @@
                     document.getElementById('currentRoundDisplay').textContent = config.currentRound;
                 }
 
-                if (config.customLogo) {
-                    updateLogoPreview(config.customLogo);
-                }
+                // Show custom logo if set, otherwise show default BeastPick logo
+                updateLogoPreview(config.customLogo || '/images/BeastPick.png');
 
                 // Update voting lock status (default to locked)
                 const votingLocked = config.votingLocked !== undefined ? config.votingLocked : true;
