--- a/public/voting.html
+++ b/public/voting.html
@@ -235,9 +235,9 @@
             try {
                 // Initial check
                 const config = await getGameConfig();
-                const votingLocked = config.votingLocked !== undefined ? config.votingLocked : true;
+                let previousLockState = config.votingLocked !== undefined ? config.votingLocked : true;
 
-                if (votingLocked) {
+                if (previousLockState) {
                     lockVoting();
                 } else {
                     unlockVoting();
@@ -248,6 +248,14 @@
                 setInterval(async () => {
                     const updatedConfig = await getGameConfig();
                     const isLocked = updatedConfig.votingLocked !== undefined ? updatedConfig.votingLocked : true;
+
+                    // If voting just unlocked (went from locked to unlocked), refresh the page
+                    if (previousLockState && !isLocked) {
+                        window.location.reload();
+                        return;
+                    }
+
+                    previousLockState = isLocked;
 
                     if (isLocked) {
                         lockVoting();
