Fix timer visibility dropdown by adding selectedTimerVisibility to selectOption function

--- a/public/admin.html
+++ b/public/admin.html
@@ -1427,6 +1427,8 @@
                 selectedText = container.querySelector('#selectedEliminatedPlayers');
             } else if (container.querySelector('#selectedPlayerName')) {
                 selectedText = container.querySelector('#selectedPlayerName');
+            } else if (container.querySelector('#selectedTimerVisibility')) {
+                selectedText = container.querySelector('#selectedTimerVisibility');
             } else {
                 selectedText = container.querySelector('#selectedMode');
             }
