Update voting mode labels to put Player first

--- a/public/admin.html
+++ b/public/admin.html
@@ -1039,8 +1039,8 @@
                             </div>
                             <div class="combobox-options">
                                 <div class="combobox-option selected" onclick="selectOption(this, 'player')">Player</div>
-                                <div class="combobox-option" onclick="selectOption(this, 'quantity-player')">Quantity & Player</div>
-                                <div class="combobox-option" onclick="selectOption(this, 'option-player')">Option & Player</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'quantity-player')">Player & Quantity</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'option-player')">Player & Option</div>
                             </div>
                         </div>
                     </div>
