Remove inline display none from timer container

--- a/public/voting.html
+++ b/public/voting.html
@@ -61,7 +61,7 @@
     <!-- Main Content -->
     <main class="contestant-main">
         <!-- Timer Display -->
-        <div class="timer-container" id="timerContainer" style="display: none;">
+        <div class="timer-container" id="timerContainer">
             <div class="timer-display" id="timerDisplay">0:00</div>
         </div>
 
