Disable Service Worker for development to prevent caching issues

--- a/public/voting.html
+++ b/public/voting.html
@@ -108,12 +108,12 @@
             window.location.href = '/players.html';
         });
 
-        // Register Service Worker for PWA
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
-                .then(reg => console.log('Service Worker registered'))
-                .catch(err => console.log('Service Worker registration failed'));
-        }
+        // Register Service Worker for PWA - DISABLED FOR DEVELOPMENT
+        // if ('serviceWorker' in navigator) {
+        //     navigator.serviceWorker.register('/sw.js')
+        //         .then(reg => console.log('Service Worker registered'))
+        //         .catch(err => console.log('Service Worker registration failed'));
+        // }
 
         // Timer functionality
         let timerInterval;
