Add automatic page refresh when voting starts
Voting pages now automatically reload when admin presses Start button,
ensuring immediate display of countdown timer with synchronized time.
Polling detects unlock within 500ms and triggers refresh.

--- a/public/voting.html
+++ b/public/voting.html
@@ -254,17 +254,10 @@
                     const updatedConfig = await getGameConfig();
                     const isLocked = updatedConfig.votingLocked !== undefined ? updatedConfig.votingLocked : true;
 
-                    // If voting just unlocked (went from locked to unlocked), restart timer immediately
+                    // If voting just unlocked (went from locked to unlocked), refresh page immediately
                     if (previousLockState && !isLocked) {
-                        console.log('Voting unlocked, restarting timer...');
-                        unlockVoting();
-                        // Stop any existing timer
-                        if (timerInterval) {
-                            clearInterval(timerInterval);
-                        }
-                        // Restart timer with fresh duration
-                        await initTimer();
-                        previousLockState = isLocked;
+                        console.log('Voting unlocked, refreshing page to start timer...');
+                        window.location.reload();
                         return;
                     }
 
